@@ -27,12 +27,12 @@ c NA 7 10 13
 d NA 8 11 14
 e NA 9 12 15
 > as.array(y)
-   w x  y  z
-a  1 3  5  0
-b  2 4  6  0
-c  0 7 10 13
-d  0 8 11 14
-e  0 9 12 15
+  w x  y  z
+a 1 3  5  0
+b 2 4  6  0
+c 0 7 10 13
+d 0 8 11 14
+e 0 9 12 15
 > x
 5 x 4 virtual matrix with dimnames:
    [1] a, b, ..., e 
@@ -182,7 +182,7 @@ a      NA  5 NA
 [1] NA NA
 > x[cbind(c(NA,NA), c(NA,NA))]
 Error in `[.varray`(x, cbind(c(NA, NA), c(NA, NA))) : 
-  matrix indexing only works with numeric matrices
+  matrix indexing only works with numeric or character matrices
 > x[cbind(c(NA,NA), c(0*NA,NA))]
 [1] NA NA
 > x[cbind(c(NA,2), c(0*NA,NA))]
@@ -190,7 +190,23 @@ Error in `[.varray`(x, cbind(c(NA, NA), c(NA, NA))) :
 > x[cbind(c(1,2), c(0*NA,NA))]
 [1] NA NA
 > 
-> # Test with dimorder
+> # Some tests with dimorder & character matrix indexing
+> xr <- varray(a,b, dimorder=2:1, along=2)
+> M(xr)
+   a  b  c  d  e
+w  1  2 NA NA NA
+x  3  4  7  8  9
+y  5  6 10 11 12
+z NA NA 13 14 15
+> xr[cbind(c('y'), c('c'))]
+[1] 10
+> xr[cbind(c('x','y'), c('b','c'))]
+[1]  4 10
+> xr[list(c('x','y'), c('b','c'))]
+[1]  4 10
+> xr[data.frame(c('x','y'), c('b','c'))]
+[1]  4 10
+> # More tests with dimorder
 > at <- t(a)
 > bt <- t(b)
 > xt <- varray(at, bt, dimorder=2:1)
